# maas-power-unifi

./: Cargo.toml  LICENSE
.github/: README.md
.github/workflows/: build.yml
resources/: example.toml
src/: args.rs  config.rs  main.rs  router.rs  unifi.rs
src/unifi/: client.rs  handler.rs  models.rs  self_hosted.rs
