[package]
name = "unifi-power"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
axum = "0.6.12"
http = "0.2.9"
hyper = { version = "0.14.25", features = ["client"] }
oauth = "0.0.1"
reqwest = { version = "0.11.16", features = ["rustls", "cookies", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
wiremock = "0.5.18"
