[package]
name = "maas-power-unifi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
axum = { version = "0.6.12", features = ["headers"] }
clap = { version = "4.2.1", features = ["derive"] }
dyn-clone = "1.0.11"
http = "0.2.9"
hyper = { version = "0.14.25", features = ["client"] }
reqwest = { version = "0.11.16", features = ["rustls", "cookies", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.7.3"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
wiremock = "0.5.18"
